<resources>
    <string name="app_name">Clounema</string>
    <string name="user_name">Admin</string>
    <string name="user_email">admin@gmail.com</string>
    <string name="synopsis">When Thor\'s evil brother, Loki (Tom Hiddleston), gains access to the unlimited power of the energy cube called the Tesseract, Nick Fury (Samuel L. Jackson), director of S.H.I.E.L.D., initiates a superhero recruitment effort to defeat the unprecedented threat to Earth. Joining Fury\'s "dream team" are Iron Man (Robert Downey Jr.), Captain America (Chris Evans), the Hulk (Mark Ruffalo), Thor (Chris Hemsworth), the Black Widow (Scarlett Johansson) and Hawkeye (Jeremy Renner).</string>
    <string name="synopsis2">Wade Wilson (Ryan Reynolds) is a former Special Forces operative who now works as a mercenary. His world comes crashing down when evil scientist Ajax (Ed Skrein) tortures, disfigures and transforms him into Deadpool. The rogue experiment leaves Deadpool with accelerated healing powers and a twisted sense of humor. With help from mutant allies Colossus and Negasonic Teenage Warhead (Brianna Hildebrand), Deadpool uses his new skills to hunt down the man who nearly destroyed his life.</string>
    <string name="synopsis3">Forever alone in a crowd, failed comedian Arthur Fleck seeks connection as he walks the streets of Gotham City. Arthur wears two masks -- the one he paints for his day job as a clown, and the guise he projects in a futile attempt to feel like he\'s part of the world around him. Isolated, bullied and disregarded by society, Fleck begins a slow descent into madness as he transforms into the criminal mastermind known as the Joker.</string>
    <string name="synopsis4">Before she was Wonder Woman (Gal Gadot), she was Diana, princess of the Amazons, trained to be an unconquerable warrior. Raised on a sheltered island paradise, Diana meets an American pilot (Chris Pine) who tells her about the massive conflict that\'s raging in the outside world. Convinced that she can stop the threat, Diana leaves her home for the first time. Fighting alongside men in a war to end all wars, she finally discovers her full powers and true destiny.</string>
    <string name="synopsis5">Film celebrating the 50th anniversary of "Doraemon." This 3DCG animation recreates an episode about Nobita and his grandma from the original work. STAND BY ME DORAEMON director Yamazaki Takashi returns to helm this sequel with Yagi Ryuichi as co-director. Nobita finds a teddy bear hand sewn by his beloved grandma. The memories trigger a torrent of tears for Nobita, who asks Doraemon if they can use the time machine to visit the past.</string>
    <string name="director1">Joss Whedon</string>
    <string name="director2">Tim Miller</string>
    <string name="director3">Todd Phillips</string>
    <string name="director4">Patty Jenkins</string>
    <string name="director5">Takahashi Yamazaki, Ryuichi Yagi</string>
    <string name="movie_title1">Avengers</string>
    <string name="movie_title2">Deadpool 2</string>
    <string name="movie_title3">Joker</string>
    <string name="movie_title4">Wonder Woman</string>
    <string name="movie_title5">Doraemon Stand by Me</string>
    <string name="movie_year1">2012</string>
    <string name="movie_year2">2016</string>
    <string name="movie_year3">2019</string>
    <string name="movie_year4">2017</string>
    <string name="movie_year5">2014</string>
    <string name="sign_in">Masuk</string>
    <string name="email_address">Masukan email</string>
    <string name="password">Kata Sandi</string>
    <string name="lupa_password">Lupa Kata Sandi?</string>
    <string name="dont_have_account">Tidak punya akun?</string>
    <string name="sign_up">Buat akun</string>
    <string name="login_with">atau</string>
    <string name="google">Daftar dengan Google</string>
    <string name="username">Nama pengguna</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save_continue">Simpan dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="ob1_title">Menonton movie terbaru tidak pernah semudah ini</string>
    <string name="ob1_desc">Movie yang sedang tayang di bioskop kini dapat anda nikmati di dalam genggaman anda</string>
    <string name="ob2_title">Nonton movie favorit anda tanpa batasan</string>
    <string name="ob2_desc">Nikmati movie favorit anda kapanpun tanpa takut kehabisan kursi</string>
    <string name="ob3_title">Semua film yang tayang adalah yang terbaru</string>
    <string name="ob3_desc">Hilangkan rasa bosan dengan menikmati semua film terbaru yang sedang tayang di bioskop</string>

</resources>