<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Clounema"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Sedang Tayang"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/movie1"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/movie2"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/movie3"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/movie4"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/movie5"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />
                </RelativeLayout>
            </LinearLayout>

        </HorizontalScrollView>
<!--Id untuk ini adalah sesuatu yang sengaja sembunyi untuk ngetest recycler view-->
        <TextView
            android:id="@+id/hiddenRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Coming Soon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/movie_ic1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_icon_google" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/movie_title1"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/movie_year1"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/movie_ic2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_icon_google" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/movie_title3"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/movie_year3"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/movie_ic3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_icon_google" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/movie_title2"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/movie_year2"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/movie_ic4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_icon_google" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/movie_title4"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/movie_year4"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/movie_ic5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_icon_google" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/movie_title5"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/movie_year5"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="@drawable/btn_bg_color2"
        android:elevation="2dp"
        android:orientation="vertical"
        app:itemIconSize="30dp"
        app:menu="@menu/item_menu" />
</LinearLayout>
